:zap: Improve diagnostics for CGLIB ClassLoader mismatch with --add-opens hint